syntax = "proto3";
package decentraland.sdk.components;

import "decentraland/sdk/components/common/id.proto";
option (common.ecs_component_id) = 1080;
import "decentraland/common/colors.proto";

// The AvatarShape component contains the information required to draw and animate avatar, acting as
// a simplified GLTF container for this specific case. 
//
// All fields (except ID) are optional have reasonable default values. In the case of `wearables`,
// each slot on the Avatar's body that is not explicitly included in the list has its own default.
//
// Note that, while AvatarShape can be attached to any Entity, it's only actually used in the global 
// Avatar Scene. Other requirements are usually better served by GLTFs.
message PBAvatarShape {
  string id = 1;                  // the user ID
  optional string name = 2;       // visible name (default: "NPC")
  optional string body_shape = 3; // shape URN (default "urn:decentraland:off-chain:base-avatars:BaseFemale")

  optional decentraland.common.Color3 skin_color = 4; // RGB (default [0.6, 0.462, 0.356])
  optional decentraland.common.Color3 hair_color = 5; // RGB (default [0.283, 0.142, 0])
  optional decentraland.common.Color3 eye_color = 6;  // RGB (default [0.6, 0.462, 0.356])

  optional string expression_trigger_id = 7;       // current emote animations
  optional int64 expression_trigger_timestamp = 8; // start of emote animations (in the same order)

  optional bool talking = 9; // whether to display the floating voice chat icon

  // Wearable URNs, one for each body slot.
  //   Default values for each unspecified slot:
  //     Eyes    : "urn:decentraland:off-chain:base-avatars:f_eyes_00", 
  //     Eyebrows: "urn:decentraland:off-chain:base-avatars:f_eyebrows_00",
  //     Mouth   : "urn:decentraland:off-chain:base-avatars:f_mouth_00" 
  //     Hair    : "urn:decentraland:off-chain:base-avatars:standard_hair", 
  //     Shirt   : "urn:decentraland:off-chain:base-avatars:f_simple_yellow_tshirt", 
  //     Trousers: "urn:decentraland:off-chain:base-avatars:f_brown_trousers", 
  //     Shoes   : "urn:decentraland:off-chain:base-avatars:bun_shoes"]
  repeated string wearables = 10; 
  repeated string emotes = 11; // available emotes (default empty)
}

