syntax = "proto3";

package decentraland.sdk.components;

import "decentraland/sdk/components/common/id.proto";
option (common.ecs_component_id) = 1044;

message PBVideoEvent {
  uint32 timestamp = 1;     // monotonic counter
  uint32 tick_number = 2;   // number of tick in which the event was produced, equals to EngineInfo.tick_number
  float current_offset = 3;
  float video_length = 4;
  VideoState state = 5;
}

enum VideoState {
  VS_NONE = 0;
  VS_ERROR = 1;
  VS_LOADING = 2;
  VS_READY = 3;
  VS_PLAYING = 4;
  VS_BUFFERING = 5;
  VS_SEEKING = 6;
  VS_PAUSED = 7;
}